[gd_scene load_steps=17 format=3 uid="uid://bgei4l44scxyg"]

[ext_resource type="Script" uid="uid://d11fr76d7gvjv" path="res://src/card_ui/card/card.gd" id="1_of7fp"]
[ext_resource type="Texture2D" uid="uid://bh1wjx00rc4ff" path="res://assets/images/cards/white_front.png" id="2_mxmy7"]
[ext_resource type="Script" uid="uid://dkatnti28hcwg" path="res://src/ui_elements/draggable/draggable.gd" id="2_tgw1k"]
[ext_resource type="Theme" uid="uid://sfftfr7d567s" path="res://assets/resources/themes/theme_cards.tres" id="3_feltw"]
[ext_resource type="PackedScene" uid="uid://ct0o4u7jepmja" path="res://src/ui_elements/pulse_button/Pulse_button.tscn" id="4_js1fh"]
[ext_resource type="Texture2D" uid="uid://b37i0kp2vgepa" path="res://assets/images/ui/checkmark.png" id="5_cxcvc"]
[ext_resource type="Texture2D" uid="uid://0av12aiq7agl" path="res://assets/images/ui/pencil.png" id="5_feltw"]
[ext_resource type="Material" uid="uid://dkpbibxjep4ot" path="res://src/card_ui/card/edge.tres" id="5_tgw1k"]
[ext_resource type="Texture2D" uid="uid://cfncsj4ixc2ja" path="res://assets/images/cards/border.png" id="7_spel0"]
[ext_resource type="Theme" uid="uid://8b0nu8iueg0s" path="res://assets/resources/themes/theme_ui.tres" id="11_wnunt"]

[sub_resource type="Environment" id="Environment_tgw1k"]
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.25

[sub_resource type="World3D" id="World3D_js1fh"]
environment = SubResource("Environment_tgw1k")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m0gau"]
albedo_color = Color(0.654232, 0.654232, 0.654232, 1)
metallic = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_js1fh"]
material = SubResource("StandardMaterial3D_m0gau")

[sub_resource type="ViewportTexture" id="ViewportTexture_tgw1k"]
viewport_path = NodePath("ImageContainer/CenterControl/ImageControl/Image/CardStuff/CubeViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_m0gau"]
viewport_path = NodePath("ImageContainer/CenterControl/ImageControl/Image/CardStuff/TextViewport")

[node name="Card" type="AspectRatioContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 182.0
offset_top = 140.0
offset_right = -83.0
offset_bottom = -239.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 0.6576
script = ExtResource("1_of7fp")
text = "[Carta editável]"
card_type = 1

[node name="ImageContainer" type="Container" parent="."]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_tgw1k")
metadata/_custom_type_script = "uid://dkatnti28hcwg"

[node name="CenterControl" type="CenterContainer" parent="ImageContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ImageControl" type="Control" parent="ImageContainer/CenterControl"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Image" type="Sprite2D" parent="ImageContainer/CenterControl/ImageControl"]
unique_name_in_owner = true
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_mxmy7")

[node name="CardStuff" type="Control" parent="ImageContainer/CenterControl/ImageControl/Image"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -267.0
offset_top = -406.0
offset_right = -267.0
offset_bottom = -406.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextEdit" type="TextEdit" parent="ImageContainer/CenterControl/ImageControl/Image/CardStuff"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 40.978
offset_top = 48.143
offset_right = 504.978
offset_bottom = 780.143
mouse_filter = 1
mouse_default_cursor_shape = 0
theme = ExtResource("3_feltw")
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
text = "LGBTQ people
    Article    Talk    Read    View source    View history Tools Page semi-protected
From Wikipedia, the free encyclopedia
\"LGBTQ\" redirects here. For the term, see LGBTQ (term). For other uses, see LGBTQ (disambiguation).
A six-band rainbow flag representing the LGBTQ community
Part of a series on LGBTQ people      
    LGBTQLesbianGayBisexualTransgenderQueer
LGBTQ people are individuals who are lesbian, gay, bisexual, transgender, queer, or questioning. Many variants of the initialism are used; LGBTQIA+ people incorporates intersex, asexual, aromantic, agender, and other individuals.[1] The group is generally conceived as broadly encompassing all individuals who are part of a sexual or gender minority. "
placeholder_text = "Carta editável"
editable = false
context_menu_enabled = false
selecting_enabled = false
wrap_mode = 1
caret_multiple = false

[node name="CubeViewport" type="SubViewport" parent="ImageContainer/CenterControl/ImageControl/Image/CardStuff"]
unique_name_in_owner = true
world_3d = SubResource("World3D_js1fh")
transparent_bg = true

[node name="OmniLight3D" type="OmniLight3D" parent="ImageContainer/CenterControl/ImageControl/Image/CardStuff/CubeViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.41957, 2.27761, 1.63508)
light_energy = 3.0
omni_shadow_mode = 0

[node name="Cube" type="MeshInstance3D" parent="ImageContainer/CenterControl/ImageControl/Image/CardStuff/CubeViewport"]
unique_name_in_owner = true
mesh = SubResource("BoxMesh_js1fh")
skeleton = NodePath("../../..")

[node name="Camera3D" type="Camera3D" parent="ImageContainer/CenterControl/ImageControl/Image/CardStuff/CubeViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.961569, 0.274564, 0, -0.274564, 0.961569, 0, 0.80651, 2.31952)
current = true
fov = 49.6
far = 5.0

[node name="TextViewport" type="SubViewport" parent="ImageContainer/CenterControl/ImageControl/Image/CardStuff"]
disable_3d = true
transparent_bg = true
size = Vector2i(454, 729)

[node name="CardText" type="RichTextLabel" parent="ImageContainer/CenterControl/ImageControl/Image/CardStuff/TextViewport"]
unique_name_in_owner = true
anchors_preset = -1
anchor_bottom = 0.009
offset_right = 454.0
offset_bottom = -6.561
mouse_filter = 2
theme = ExtResource("3_feltw")
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="CubeViewportTexture" type="TextureRect" parent="ImageContainer/CenterControl/ImageControl/Image/CardStuff"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 19.978
offset_top = 177.143
offset_right = 517.978
offset_bottom = 675.143
mouse_filter = 2
texture = SubResource("ViewportTexture_tgw1k")
expand_mode = 1

[node name="TextViewportTexture" type="TextureRect" parent="ImageContainer/CenterControl/ImageControl/Image/CardStuff"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 40.978
offset_top = 39.143
offset_right = 494.978
offset_bottom = 770.143
mouse_filter = 2
texture = SubResource("ViewportTexture_m0gau")
expand_mode = 1

[node name="Edge" type="Sprite2D" parent="ImageContainer/CenterControl/ImageControl/Image/CardStuff"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
material = ExtResource("5_tgw1k")
position = Vector2(267, 406)
texture = ExtResource("7_spel0")

[node name="TextEditButton" parent="ImageContainer/CenterControl/ImageControl/Image/CardStuff" instance=ExtResource("4_js1fh")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
offset_left = -48.7579
offset_top = 336.0
offset_right = 51.2421
offset_bottom = 436.0
pivot_offset = Vector2(50, 50)
is_toggled = false
texture_on = ExtResource("5_cxcvc")
texture_off = ExtResource("5_feltw")

[node name="PickSlider" type="HSlider" parent="ImageContainer/CenterControl/ImageControl/Image/CardStuff"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 40.0
offset_top = 836.0
offset_right = 494.0
offset_bottom = 900.0
theme = ExtResource("11_wnunt")
min_value = 1.0
max_value = 3.0
value = 1.0
rounded = true
scrollable = false
tick_count = 3
ticks_on_borders = true

[node name="PickLabel" type="Label" parent="ImageContainer/CenterControl/ImageControl/Image/CardStuff/PickSlider"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -30.5
offset_right = 89.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("11_wnunt")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "1 resposta"

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 2
mouse_filter = 2
border_width = 3.0

[connection signal="resized" from="." to="." method="_on_image_container_resized"]
[connection signal="resized" from="ImageContainer" to="." method="_on_image_container_resized"]
[connection signal="pulse_toggled" from="ImageContainer/CenterControl/ImageControl/Image/CardStuff/TextEditButton" to="." method="_on_text_edit_button_toggled"]
[connection signal="value_changed" from="ImageContainer/CenterControl/ImageControl/Image/CardStuff/PickSlider" to="." method="_on_pick_slider_value_changed"]
